<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sipapa Entertainment</string>
    <string name="app_tagline">Home Brewed Entertainment</string>
    <string name="action_settings">Settings</string>
    <string name="top_cover_descr">The Top Cover Picture</string>
    <string name="top_article_cat">Tech</string>
    <string name="top_article_title">TAG Heuer\'s luxury smartwatch to cost $1400, have a 40-hour battery.</string>
    <string name="article_author">Collins Wagaba</string>
    <string name="article_date">Apr 30th, 2015</string>
    <string name="article_views">139K Views</string>
    <string name="article_body">We no longer require homes, bars, offices or cafes to keep in touch with people. We can do it literally anywhere we happen to be. This begs the question: when we connect to our devices, are we disconnecting from the people around us? Are we hiding behind a screen from the physical world and becoming antisocial in turn? While there is a sense of panic about how the Internet is detrimental to communication, there are also lots of people who believe that it is actually enhancing our relationships. For better or worse, here are a few of the ways the Internet is changing the way we communicate, and how you can keep abreast of tech advances thanks to eBay.</string>
    <string name="subscribe_head_title">NEWSLETTERS</string>
    <string name="subscribe_email_hint">Email Address</string>
    <string name="subscribe_button_text">SUBSCRIBE</string>
    <string name="comment_button_text">Post</string>
    <string name="comment_button_hint">Write a Comment</string>
    <string name="action_search">Search Articles</string>
    <string name="action_more">More Options</string>
    <string name="ad_title">Rafiki Adeventures</string>
    <string name="ad_description">Much more than a Safari.</string>
    <string name="copyright">Copyright 2015 Sipapa Entertainment</string>
    <string name="about_text">About</string>
    <string name="contact_text">Contact</string>
    <string name="advertise_text">Advertise</string>
    <string name="social_link">Social Link</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_main_activity2">MainActivity2Activity</string>
    <string name="title_activity_main_activity22">MainActivity22Activity</string>

</resources>
