<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#EAEAEA"
    tools:context="com.plus256.sipapa.FetchArticleDetails">

<LinearLayout
	    android:orientation="vertical"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:id="@+id/body_wrapper">
	
		<LinearLayout
		    android:orientation="vertical"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:paddingLeft="@dimen/activity_common_space"
	    	android:paddingRight="@dimen/activity_common_space">
		    
		    <!-- Start Article Details -->
		    <LinearLayout
		        android:orientation="vertical"
		        android:id="@+id/article_details"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:background="@color/White"
		        android:layout_marginTop="@dimen/activity_common_space">
		        
		        <TextView 
			       	android:layout_width="match_parent"
				   	android:layout_height="wrap_content"
				   	android:text="@string/top_article_title"
				   	android:padding="@dimen/activity_rare_space"
				   	android:textStyle="bold"/>
	            
	            <TextView 
			       	android:layout_width="match_parent"
				   	android:layout_height="wrap_content"
				   	android:text="@string/article_author"
				   	android:textColor="@color/CoolBlue"
				   	android:paddingRight="@dimen/activity_rare_space"
				   	android:paddingLeft="@dimen/activity_rare_space"/>
	            
	            <TextView 
			       	android:layout_width="match_parent"
				   	android:layout_height="wrap_content"
				   	android:text="@string/article_date"
				   	android:paddingRight="@dimen/activity_rare_space"
				   	android:paddingLeft="@dimen/activity_rare_space"/>
	            
	            <TextView 
			       	android:layout_width="match_parent"
				   	android:layout_height="wrap_content"
				   	android:text="@string/top_article_cat"
				   	android:textColor="@color/ThemeColor"
				   	android:paddingRight="@dimen/activity_rare_space"
				   	android:paddingLeft="@dimen/activity_rare_space"/>
	            
	            <TextView 
			       	android:layout_width="match_parent"
				   	android:layout_height="wrap_content"
				   	android:text="@string/article_views"
				   	android:textStyle="bold"
				   	android:paddingRight="@dimen/activity_rare_space"
				   	android:paddingLeft="@dimen/activity_rare_space"/>
	
		        <ImageView
		            android:id="@+id/top_article_cover"
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:contentDescription="@string/top_cover_descr"
		            android:scaleType="fitXY"
		            android:src="@drawable/lg_g4"
		            android:layout_marginTop="@dimen/activity_rare_space" />
		        
		        <TextView 
			       	android:layout_width="match_parent"
				   	android:layout_height="wrap_content"
				   	android:text="@string/article_body"
				   	android:textColor="@color/Black"
				   	android:padding="@dimen/activity_rare_space"/>
		        
		    </LinearLayout>
		    <!-- End Article Details -->
		    
		    <!-- Start Main Article Container -->
	        <LinearLayout
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:orientation="vertical"
		        android:id="@+id/main_article_container"
		        android:layout_marginTop="@dimen/activity_common_space">
		        
		    </LinearLayout>
		    <!-- End Main Article Container -->
		    
		    <!-- Start Adverts Container -->
	        <LinearLayout
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:orientation="vertical"
		        android:id="@+id/ad_container"
		        android:layout_marginTop="@dimen/activity_common_space">
		        
		    </LinearLayout>
		    <!-- End Adverts Container -->
		    
	        <!-- Start Subscription -->
	        <LinearLayout
	            android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:orientation="vertical"
				android:background="@color/White"
				android:layout_marginTop="@dimen/activity_common_space">
		        
	            <TextView
	                android:layout_width="match_parent"
			    	android:layout_height="wrap_content"
			    	android:padding="@dimen/activity_rare_space"
			    	android:text="@string/subscribe_head_title"
			    	android:textStyle="bold"
			    	android:gravity="center_horizontal"/>
	            <View
	                android:layout_width="match_parent"
	                android:layout_height="@dimen/tiny_divider"
	                android:background="#F1F1F1"/>
	            
	            <EditText
	                android:id="@+id/subscribe_email"
	                android:inputType="textEmailAddress"
	                android:layout_width="match_parent"
			    	android:layout_height="wrap_content"
	                android:hint="@string/subscribe_email_hint"
	                android:gravity="center_horizontal"
	                android:layout_marginLeft="@dimen/activity_rare_space"
	                android:layout_marginRight="@dimen/activity_rare_space"/>
	            <Button
	                android:layout_width="match_parent"
			    	android:layout_height="wrap_content"
			    	android:text="@string/subscribe_button_text"
			    	android:textColor="@color/White"
			    	android:background="@color/ThemeColor"
			    	android:layout_margin="@dimen/activity_rare_space"/>
	            
	        </LinearLayout>
	        <!-- End Subscription -->
		
		</LinearLayout>
		
		<!-- Dynamically Add Footer Right Here -->
	
	</LinearLayout>

</ScrollView>
