<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:id="@+id/footer"
    android:background="@color/DarkGrey">
    
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:gravity="center_horizontal"
    	android:padding="@dimen/activity_rare_space">
        
        <ImageView
            android:id="@+id/facebook_connect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/social_link"
            android:scaleType="centerCrop"
            android:src="@drawable/facebook" />
        
        <ImageView
            android:id="@+id/twitter_connect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/social_link"
            android:scaleType="centerCrop"
            android:src="@drawable/twitter"
            android:paddingRight="@dimen/activity_common_space"
            android:paddingLeft="@dimen/activity_common_space"/>
        
        <ImageView
            android:id="@+id/google_plus_connect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/social_link"
            android:scaleType="centerCrop"
            android:src="@drawable/google" />
        
    </LinearLayout>
    
    <View
        android:layout_width="match_parent"
    	android:layout_height="@dimen/big_divider"
    	android:background="@color/LightGrey"/>
    
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:paddingTop="@dimen/activity_rare_space"
    	android:paddingBottom="@dimen/activity_rare_space">
        
        <TextView
            android:id="@+id/about_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_text"
            android:textColor="@color/LightGrey"
            android:padding="@dimen/activity_rare_space"
            android:gravity="center_horizontal" />
        
        <TextView
            android:id="@+id/contact_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contact_text"
            android:textColor="@color/LightGrey"
            android:padding="@dimen/activity_rare_space"
            android:gravity="center_horizontal" />
        
        <TextView
            android:id="@+id/advertise_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/advertise_text"
            android:textColor="@color/LightGrey"
            android:padding="@dimen/activity_rare_space"
            android:gravity="center_horizontal" />
        
    </LinearLayout>
    
    <View
        android:layout_width="match_parent"
    	android:layout_height="@dimen/big_divider"
    	android:background="@color/LightGrey"/>
    
    <TextView
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:padding="@dimen/activity_common_space"
    	android:textColor="@color/LightGrey"
        android:text="@string/copyright"
        android:gravity="center_horizontal" />
    

</LinearLayout>
