<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#EAEAEA"
    tools:context="com.plus256.sipapa.MainActivity">

	<LinearLayout
	    android:orientation="vertical"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:id="@+id/body_wrapper">

	
		<LinearLayout
		    android:orientation="vertical"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:paddingLeft="@dimen/activity_common_space"
	    	android:paddingRight="@dimen/activity_common_space">

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="Artists Management, Events Organising, Production House (Sipapa Records) and many others."
				android:textColor="@color/Black"
				android:background="@color/LightGrey"
				android:padding="@dimen/activity_common_space"
				android:layout_marginBottom="@dimen/activity_common_space"
				android:gravity="center_horizontal"/>
		    
		    <!-- Start Top Article Container
		    <RelativeLayout
		        android:id="@+id/top_article"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="@dimen/activity_common_space">
	
		        <ImageView
		            android:id="@+id/top_article_cover"
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:contentDescription="@string/top_cover_descr"
		            android:scaleType="fitXY"
		            android:src="@drawable/cover" />
			   
		        <LinearLayout
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:orientation="vertical"
				   	android:background="#EEFFFFFF"
				   	android:padding="@dimen/activity_common_space"
		            android:layout_marginTop="@dimen/activity_common_space">
		            
		            <TextView 
				       	android:layout_width="match_parent"
					   	android:layout_height="wrap_content"
					   	android:text="@string/top_article_cat"
					   	android:textColor="@color/ThemeColor"/>
		            
		            <TextView 
				       	android:layout_width="match_parent"
					   	android:layout_height="wrap_content"
					   	android:text="@string/top_article_title"
					   	android:id="@+id/top_article_title"
					   	android:textColor="@color/Black"/>
		            
		        </LinearLayout>
		        
		    </RelativeLayout>
		    End Top Article Container -->
		    
		    <!-- Start Main Article Container -->
			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical">

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="vertical"
					android:background="@color/White"
					android:layout_marginBottom="@dimen/activity_common_space">

					<ImageView
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:src="@drawable/cover"
						android:scaleType="fitXY"
						android:contentDescription="@string/top_cover_descr"/>

					<LinearLayout
						android:orientation="vertical"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:padding="@dimen/activity_rare_space">

						<TextView
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:text="@string/article_date"
							android:textColor="@color/ThemeColor"/>

						<TextView
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:text="Akatti Collabo. Chamileon and Mary Bata."
							android:textColor="@color/Black"/>

						<LinearLayout
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:orientation="horizontal"
							android:padding="@dimen/activity_rare_space">

							<TextView
								android:layout_width="0dp"
								android:layout_weight="1"
								android:layout_height="wrap_content"
								android:text="903 Likes"
								android:gravity="center_horizontal"
								android:textColor="@color/LightGrey"/>

							<TextView
								android:layout_width="0dp"
								android:layout_weight="1"
								android:layout_height="wrap_content"
								android:text="16 Comments"
								android:gravity="center_horizontal"
								android:textColor="@color/LightGrey"/>

							<TextView
								android:layout_width="0dp"
								android:layout_weight="1"
								android:layout_height="wrap_content"
								android:text="76 Shares"
								android:gravity="center_horizontal"
								android:textColor="@color/LightGrey"/>

						</LinearLayout>

						<LinearLayout
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:orientation="horizontal"
							android:padding="@dimen/activity_rare_space">

							<TextView
								android:layout_width="0dp"
								android:layout_weight="1"
								android:layout_height="wrap_content"
								android:text="Like"
								android:textColor="@color/White"
								android:gravity="center_horizontal"
								android:background="@color/LightGrey"
								android:padding="@dimen/activity_rare_space"/>

							<TextView
								android:layout_width="0dp"
								android:layout_weight="1"
								android:layout_height="wrap_content"
								android:text="Comment"
								android:textColor="@color/White"
								android:gravity="center_horizontal"
								android:background="@color/LightGrey"
								android:padding="@dimen/activity_rare_space"
								android:layout_marginRight="@dimen/activity_rare_space"
								android:layout_marginLeft="@dimen/activity_rare_space"/>

							<!--<ImageView
								android:layout_width="0dp"
								android:layout_height="wrap_content"
								android:layout_weight="1"
								android:src="@drawable/ic_share"
								android:background="@color/LightGrey"/>-->

							<TextView
								android:layout_width="0dp"
								android:layout_weight="1"
								android:layout_height="wrap_content"
								android:text="Share"
								android:textColor="@color/White"
								android:gravity="center_horizontal"
								android:background="@color/LightGrey"
								android:padding="@dimen/activity_rare_space"/>

						</LinearLayout>

					</LinearLayout>

				</LinearLayout>

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="vertical"
					android:background="@color/White"
					android:layout_marginBottom="@dimen/activity_common_space">

					<ImageView
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:src="@drawable/car"
						android:scaleType="fitXY"
						android:contentDescription="@string/top_cover_descr"/>

					<LinearLayout
						android:orientation="vertical"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:padding="@dimen/activity_rare_space">

						<TextView
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:text="@string/article_date"
							android:textColor="@color/ThemeColor"/>

						<TextView
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:text="They both wish you a good afternoon."
							android:textColor="@color/Black"/>

						<LinearLayout
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:orientation="horizontal"
							android:padding="@dimen/activity_rare_space">

							<TextView
								android:layout_width="0dp"
								android:layout_weight="1"
								android:layout_height="wrap_content"
								android:text="665K Likes"
								android:gravity="center_horizontal"
								android:textColor="@color/LightGrey"/>

							<TextView
								android:layout_width="0dp"
								android:layout_weight="1"
								android:layout_height="wrap_content"
								android:text="165 Comments"
								android:gravity="center_horizontal"
								android:textColor="@color/LightGrey"/>

							<TextView
								android:layout_width="0dp"
								android:layout_weight="1"
								android:layout_height="wrap_content"
								android:text="7 Shares"
								android:gravity="center_horizontal"
								android:textColor="@color/LightGrey"/>

						</LinearLayout>

						<LinearLayout
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:orientation="horizontal"
							android:padding="@dimen/activity_rare_space">

							<TextView
								android:layout_width="0dp"
								android:layout_weight="1"
								android:layout_height="wrap_content"
								android:text="Like"
								android:textColor="@color/White"
								android:gravity="center_horizontal"
								android:background="@color/LightGrey"
								android:padding="@dimen/activity_rare_space"/>

							<TextView
								android:layout_width="0dp"
								android:layout_weight="1"
								android:layout_height="wrap_content"
								android:text="Comment"
								android:textColor="@color/White"
								android:gravity="center_horizontal"
								android:background="@color/LightGrey"
								android:padding="@dimen/activity_rare_space"
								android:layout_marginRight="@dimen/activity_rare_space"
								android:layout_marginLeft="@dimen/activity_rare_space"/>

							<TextView
								android:layout_width="0dp"
								android:layout_weight="1"
								android:layout_height="wrap_content"
								android:text="Share"
								android:textColor="@color/White"
								android:gravity="center_horizontal"
								android:background="@color/LightGrey"
								android:padding="@dimen/activity_rare_space"/>

						</LinearLayout>

					</LinearLayout>

				</LinearLayout>

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="vertical"
					android:background="@color/White"
					android:layout_marginBottom="@dimen/activity_common_space">

					<ImageView
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:src="@drawable/car4"
						android:scaleType="fitXY"
						android:contentDescription="@string/top_cover_descr"/>

					<LinearLayout
						android:orientation="vertical"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:padding="@dimen/activity_rare_space">

						<TextView
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:text="@string/article_date"
							android:textColor="@color/ThemeColor"/>

						<TextView
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:text="Serena Bata with a brand new tune. Hit after hit. Sipapa Entertainment taking it to the next level."
							android:textColor="@color/Black"/>

						<LinearLayout
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:orientation="horizontal"
							android:padding="@dimen/activity_rare_space">

							<TextView
								android:layout_width="0dp"
								android:layout_weight="1"
								android:layout_height="wrap_content"
								android:text="13 Likes"
								android:gravity="center_horizontal"
								android:textColor="@color/LightGrey"/>

							<TextView
								android:layout_width="0dp"
								android:layout_weight="1"
								android:layout_height="wrap_content"
								android:text="19 Comments"
								android:gravity="center_horizontal"
								android:textColor="@color/LightGrey"/>

							<TextView
								android:layout_width="0dp"
								android:layout_weight="1"
								android:layout_height="wrap_content"
								android:text="26 Shares"
								android:gravity="center_horizontal"
								android:textColor="@color/LightGrey"/>

						</LinearLayout>

						<LinearLayout
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:orientation="horizontal"
							android:padding="@dimen/activity_rare_space">

							<TextView
								android:layout_width="0dp"
								android:layout_weight="1"
								android:layout_height="wrap_content"
								android:text="Like"
								android:textColor="@color/White"
								android:gravity="center_horizontal"
								android:background="@color/LightGrey"
								android:padding="@dimen/activity_rare_space"/>

							<TextView
								android:layout_width="0dp"
								android:layout_weight="1"
								android:layout_height="wrap_content"
								android:text="Comment"
								android:textColor="@color/White"
								android:gravity="center_horizontal"
								android:background="@color/LightGrey"
								android:padding="@dimen/activity_rare_space"
								android:layout_marginRight="@dimen/activity_rare_space"
								android:layout_marginLeft="@dimen/activity_rare_space"/>

							<TextView
								android:layout_width="0dp"
								android:layout_weight="1"
								android:layout_height="wrap_content"
								android:text="Share"
								android:textColor="@color/White"
								android:gravity="center_horizontal"
								android:background="@color/LightGrey"
								android:padding="@dimen/activity_rare_space"/>

						</LinearLayout>

					</LinearLayout>

				</LinearLayout>

			</LinearLayout>
		    <!-- End Main Article Container -->
		    
		    <!-- Start Adverts Container -->
	        <LinearLayout
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:orientation="vertical"
		        android:id="@+id/ad_container"
		        android:layout_marginTop="@dimen/activity_common_space">
		        
		    </LinearLayout>
		    <!-- End Adverts Container -->
		    
	        <!-- Start Subscription -->
	        <LinearLayout
	            android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:orientation="vertical"
				android:background="@color/White"
				android:layout_marginTop="@dimen/activity_common_space">
		        
	            <TextView
	                android:layout_width="match_parent"
			    	android:layout_height="wrap_content"
			    	android:padding="@dimen/activity_rare_space"
			    	android:text="@string/subscribe_head_title"
			    	android:textStyle="bold"
			    	android:gravity="center_horizontal"/>
	            <View
	                android:layout_width="match_parent"
	                android:layout_height="@dimen/tiny_divider"
	                android:background="#F1F1F1"/>
	            
	            <EditText
	                android:id="@+id/subscribe_email"
	                android:inputType="textEmailAddress"
	                android:layout_width="match_parent"
			    	android:layout_height="wrap_content"
	                android:hint="@string/subscribe_email_hint"
	                android:gravity="center_horizontal"
	                android:layout_marginLeft="@dimen/activity_rare_space"
	                android:layout_marginRight="@dimen/activity_rare_space"/>
	            <Button
	                android:layout_width="match_parent"
			    	android:layout_height="wrap_content"
			    	android:text="@string/subscribe_button_text"
			    	android:textColor="@color/White"
			    	android:background="@color/ThemeColor"
			    	android:layout_margin="@dimen/activity_rare_space"/>
	            
	        </LinearLayout>
	        <!-- End Subscription -->
		
		</LinearLayout>
		
		<!-- Dynamically Add Footer Right Here -->
	
	</LinearLayout>

</ScrollView>
